--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                     <li>De 5de HTML opdracht aan het afronden.</li>
                 </ol>
                 <p>Heb je vragen; neem dan contact op via het volgende formulier:
-                   <form name="contact" data-netlify="true">
+                   <form name="contact" method="POST" data-netlify="true">
                        <input type="name" value="Naam:"/><br>
                        <input type="email" value="Email:"/><br>
                        <input type="text" value="Vraag:"/><br>
