--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
                 </ol>
                 <p>Heb je vragen; neem dan contact op via het volgende formulier:
                    <form name="contact" method="POST" data-netlify="true">
-                       <input type="name" value="Naam:"/><br>
-                       <input type="email" value="Email:"/><br>
-                       <input type="text" value="Vraag:"/><br>
-                       <button type="submit">Send</button>
+                       <input type="name"/>
+                       <input type="email"/>
+                       <input type="text"/>
+                       <input type="submit">
                    </form> 
                 </p>
             </section>
