--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
                 </ol>
                 <p>Heb je vragen; neem dan contact op via het volgende formulier:
                    <form name="contact" method="POST" data-netlify="true">
-                       <input type="name"/>
-                       <input type="email"/>
-                       <input type="text"/>
+                       <label>Naam: <input name="Naam" type="name"/></label>
+                       <label>Email: <input name="Mail" type="email"/></label>
+                       <label>Vraag: <input name="Vraag" type="text"/></label>
                        <input type="submit">
                    </form> 
                 </p>
