--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
                 </ol>
                 <p>Heb je vragen; neem dan contact op via het volgende formulier:
                    <form name="contact" method="POST" data-netlify="true">
-                       <label>Naam: <input name="Naam" type="name"/></label>
-                       <label>Email: <input name="Mail" type="email"/></label>
-                       <label>Vraag: <input name="Vraag" type="text"/></label>
-                       <input type="submit">
+                       <label>Naam: <input name="Naam" type="name"/></label><br>
+                       <label>Email: <input name="Mail" type="email"/></label><br>
+                       <label>Vraag: <input name="Vraag" type="text"/></label><br>
+                       <button type="submit">Verstuur</button>
                    </form> 
                 </p>
             </section>
